# nih-plug-examples

./: .gitmodules  Cargo.toml  README.md  meson.build
.github/workflows/: ci.yml
examples/metronome/: Cargo.toml  README.md
examples/metronome/src/: lib.rs  main.rs
examples/midi_click/: Cargo.toml
examples/midi_click/src/: lib.rs  main.rs
examples/midi_keyboard/: Cargo.toml
examples/midi_keyboard/src/: lib.rs  main.rs
examples/simple_synth/: Cargo.toml  README.md
examples/simple_synth/src/: lib.rs  main.rs
examples/soundfont_player/: Cargo.toml  README.md
examples/soundfont_player/src/: lib.rs  main.rs
examples/ui_to_midi/: Cargo.toml  README.md
examples/ui_to_midi/src/: lib.rs  main.rs
subprojects/: .gitignore  llq.wrap
subprojects/packagefiles/: llq.diff
