[package]
name = "midi_keyboard"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/hi-ogawa/nih-plug", branch = "feat-editor-user-state-with-only-send", features = ["assert_process_allocs", "standalone"] }
nih_plug_egui = { git = "https://github.com/hi-ogawa/nih-plug", branch = "feat-editor-user-state-with-only-send" }
llq = { git = "https://github.com/glowcoil/llq" }
basedrop = { git = "https://github.com/glowcoil/basedrop" }
